# superposition-sessions

./: .env.example  .gitignore  DESIGN.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
docs/: AUDIO.md  QUANTUM.md  VOICE.md
prompts/: vignette.txt
src/superposition_sessions/: __init__.py  __main__.py
src/superposition_sessions/audio/: __init__.py  notes.py
src/superposition_sessions/literary/: __init__.py  mood.py  ollama.py
src/superposition_sessions/quantum/: __init__.py  collapse.py  seed.py
src/superposition_sessions/sessions/: __init__.py  store.py
src/superposition_sessions/web/: app.py
src/superposition_sessions/web/static/css/: session.css
src/superposition_sessions/web/static/js/: audio.js  session.js
src/superposition_sessions/web/templates/: index.html
tests/: test_collapse.py  test_quantum.py  test_store.py
