[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "superposition-sessions"
version = "0.1.0"
description = "Quantum music instrument — hold multiple songs in superposition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "qiskit>=1.0",
  "qiskit-aer>=0.13",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "jinja2>=3.1",
]

[project.scripts]
superposition-sessions = "superposition_sessions.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
